Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120622

Recorder sample app does not work as expected with WebAssembly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.1, 6.8.0 FF
    • 6.6.1, 6.7.0 Beta1
    • Multimedia
    • None
    • WebAssembly
    • 9cc8a43db (dev), 74d5a07f0 (6.7)

    Description

      The recorder sample app does not work as expected with WASM:
      1. No preview image is displayed
      2. After recording, the 'Captures' button does nothing
      3. With Firefox, the screen is blank. With Chrome, the screen is like in attached screen shot
      4. Camera is at first not visible in input selection dialog, but shows up after clicking "Hide cameras"

      Windows 11
      Emscripten 3.1.37

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes