wasm: wait for camera ready

also fix up recorder example for handle videoInputChanged

Fixes: QTBUG-120622
Pick-to: 6.7
Change-Id: Icf6be95b1b1e2c299d0810ced1d4d3ff5203f18c
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>